--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,13 @@
     <ru.brauer.customview.SomeView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:background="#AAAAAA"
+        app:cellWidthStroke="3dp"
+        app:countOfLines="10"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="w,1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:countOfLines="10"
-        app:cellWidthStroke="3dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintDimensionRatio="w,1:1"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
